# hipBLAS

./: .gitmodules  CMakeLists.txt  README.md  build.sh
clients/: CMakeLists.txt
clients/common/: clients_common.cpp  hipblas_template_specialization.cpp
clients/gtest/: CMakeLists.txt  blas1_gtest.cpp  ger_gtest.cpp  hbmv_gtest.cpp  hemm_gtest.cpp  her2_gtest.cpp  her2k_gtest.cpp  her_gtest.cpp  herk_gtest.cpp  hpmv_gtest.cpp  hpr2_gtest.cpp  hpr_gtest.cpp  sbmv_gtest.cpp  spmv_gtest.cpp  spr2_gtest.cpp  spr_gtest.cpp  symm_gtest.cpp  symv_gtest.cpp  syr2_gtest.cpp  syr2k_gtest.cpp  syr_gtest.cpp  syrk_gtest.cpp  syrkx_gtest.cpp  tbmv_gtest.cpp  tbsv_gtest.cpp  tpmv_gtest.cpp  tpsv_gtest.cpp  trmm_gtest.cpp  trmv_gtest.cpp  trsm_gtest.cpp  trsv_gtest.cpp  trtri_gtest.cpp
clients/include/: testing_asum.hpp  testing_asum_batched.hpp  testing_asum_strided_batched.hpp  testing_axpy.hpp  testing_axpy_batched.hpp  testing_axpy_batched_ex.hpp  testing_axpy_ex.hpp  testing_axpy_strided_batched.hpp  testing_axpy_strided_batched_ex.hpp  testing_common.hpp  testing_copy.hpp  testing_copy_batched.hpp  testing_copy_strided_batched.hpp  testing_dgmm.hpp  testing_dgmm_batched.hpp  testing_dgmm_strided_batched.hpp  testing_dot.hpp  testing_dot_batched.hpp  testing_dot_batched_ex.hpp  testing_dot_ex.hpp  testing_dot_strided_batched.hpp  testing_dot_strided_batched_ex.hpp  testing_exceptions.hpp  testing_gbmv.hpp  testing_gbmv_batched.hpp  testing_gbmv_strided_batched.hpp  testing_geam.hpp  testing_geam_batched.hpp  testing_geam_strided_batched.hpp  testing_gels.hpp  testing_gemm.hpp  (+161 more)
